digits-eks/eks-prod/shared-services/ingress/cis_workaround_api_legacy_rewrite_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: testingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /api/$2
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: "cbioportal.mskcc.org"
    http:
      paths:
      - path: "/api-legacy(/|$)(.*)"
        pathType: Prefix
        backend:
          service:
            name: eks-msk
            port:
               number: 80
