digits-eks/eks-prod/shared-services/ingress/cis_workaround_mskcc_rewrite_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mskanotheringress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: "nginx"
  rules:
  - host: "cbioportal.mskcc.org"
    http:
      paths:
      - path: "/mskcc(/|$)(.*)"
        pathType: ImplementationSpecific
        backend:
          service:
            name: eks-msk
            port:
               number: 80
