digits-eks/eks-prod/shared-services/ingress/eks-genome-nexus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eks-prod-ingress
  namespace: genome-nexus
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/backend-protocol: "http"
    nginx.ingress.kubernetes.io/rewrite-target: /
    # increae max response size to avoid 413 errors see
    nginx.ingress.kubernetes.io/proxy-body-size: 512m
    ingress.kubernetes.io/proxy-body-size: 512m
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    ingress.kubernetes.io/proxy-connect-timeout: "300"
    ingress.kubernetes.io/proxy-read-timeout: "300"
    ingress.kubernetes.io/proxy-send-timeout: "300"
    service.beta.kubernetes.io/aws-load-balancer-proxy-protocol: '*'
spec:
  rules:
  - host: "genomenexus.cbioportal.aws.mskcc.org"
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: genome-nexus-gnap
            port:
              number: 80
  - host: "genomenexus.cbioportal.mskcc.org"
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: genome-nexus-gnap
            port:
              number: 80
